Fixes spacing between send and redeem buttons on challenge tiles

--- a/frontend/src/scss/components/dashboard.css
+++ b/frontend/src/scss/components/dashboard.css
@@ -300,6 +300,13 @@
   margin-bottom: 10vh;
 }
 
+.initiate-payment-smaller-margin {
+  color: #00c730;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 1vh;
+}
+
 .inline-svg {
   font-weight: 500;
   height: 29px;
